# syncify

./: .env.exemple  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/: alembic.ini  main.py
backend/app/config/: database.py  logging.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 469f5ac4bc8e_initial_migration.py
backend/app/models/: __init__.py  base.py  tokens.py  users.py
backend/app/repositories/: base_repository.py  token_repository.py  user_repository.py
backend/app/routes/: spotify.py  users.py
backend/app/services/spotify_api/auth/: __init__.py  auth.py
backend/app/services/spotify_api/schemas/: album.py  artist.py  token.py
backend/app/services/spotify_api/user_management/: user_manager.py
backend/app/settings/: __init__.py
backend/app/utils/: exceptions.py
backend/app/utils/redis/: redis_config.py
backend/app/utils/validation/: users.py
backend/config/: database.py
backend/factory/: user_factory.py
backend/migrations/: env.py
backend/migrations/versions/: f85a3776bd69_ajout_de_la_table_tokens.py
backend/models/: __init__.py  base.py  tokens.py  users.py
backend/repositories/: base_repository.py  token_repository.py  user_repository.py
backend/routes/: app_auth.py  spotify.py  users.py
backend/schemas/: auth.py  users.py
backend/services/spotify_api/: exceptions.py
backend/services/spotify_api/auth/: auth.py
backend/services/spotify_api/schemas/: player.py  spotifyuser.py  track.py  user.py
backend/services/spotify_api/user_management/: user_manager.py
backend/settings/: base.py
backend/utils/: exceptions.py
backend/utils/redis/: redis_config.py
backend/utils/validation/: users.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.vue  router.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AuthSuccess.vue  Dashboard.tsx  FriendsList.vue  Header.vue  HomePage.tsx  Loader.vue  LoginForm.vue  PlayerControl.vue  RecentSessions.vue  SessionActions.vue  SessionParticipants.vue  SignUpForm.vue  SpotifyConnect.vue  SpotifyPlayer.vue  UserHome.vue  UserProfile.vue  VolumeControl.vue
frontend/src/composables/: useSpotifySDK.ts
frontend/src/pages/: auth-success.vue  connect-spotify.vue  home.vue  index.vue  (+1 more)
(+6 files in other folders)
