[tool.poetry]
name = "Syncify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
ruff = "^0.6.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
httpx = "^0.27.2"
psycopg = "^3.2.1"
pydantic-settings = "^2.4.0"
pytest = "^8.3.2"
mypy = "^1.11.2"
coverage = "^7.6.1"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.2.0"
sqlalchemy-stubs = "^0.4"
redis = "^5.1.1"
spotipy = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
