[project]
name = "syncify-backend"
version = "0.1.0"
description = "Syncify backend"
authors = [
  { name = "Marius Pruvot", email = "marius.pruvot@outlook.fr" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "coverage>=7.6.7",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "mypy>=1.13.0",
    "psycopg>=3.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.10.0",
    "pytest>=8.3.3",
    "redis>=5.2.0",
    "ruff>=0.7.4",
    "spotipy>=2.24.0",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-stubs>=0.4",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
    "types-redis>=4.6.0.20240106",
    "types-jwt>=0.1.3",
    "types-python-dateutil>=2.8.19.20240106",
    "types-requests>=2.31.0.20240125",
    "types-setuptools>=69.0.0.20240125",
    "typing-extensions>=4.9.0",
]


[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_no_return = true

[tool.ruff]
line-length = 88
exclude = [".venv","venv",".git","__pycache__",".mypy_cache",".pytest_cache"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "ARG",  # flake8-arguments
    "N",  # pep8-naming
    #"D",  # pydocstyle
]
